--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Visualizer</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Music Visualizer with Tuna.js</title>
 </head>
 <body>
-    <input type="file" id="audioFileInput" accept=".mp3">
-    <canvas id="visualizerCanvas"></canvas>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="sketch.js"></script>
+    <canvas id="visualizerCanvas" width="800" height="400"></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tuna/1.0.9/tuna.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
