--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Visualizer with Tuna.js</title>
+    <title>Music Visualizer with visualizer-micro</title>
 </head>
 <body>
     <canvas id="visualizerCanvas" width="800" height="400"></canvas>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tuna/1.0.9/tuna.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/visualizer-micro"></script>
     <script src="main.js"></script>
 </body>
 </html>
