--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <canvas id="visualizerCanvas" width="800" height="400"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/visualizer-micro"></script>
     <script src="main.js"></script>
+    <script src="visualizer-micro.js"></script>
+    <script src="visualizer-micro.min.js"></script>
 </body>
 </html>
